--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "personalsite-theme",
     "description": "Modification of Casper theme",
     "demo": "https://demo.ghost.io",
-    "version": "1.0.9",
+    "version": "1.1.0",
     "engines": {
         "ghost": ">=3.0.0",
         "ghost-api": "v3"
@@ -41,10 +41,10 @@
     ],
     "repository": {
         "type": "git",
-        "url": "https://github.com/TryGhost/Casper.git"
+        "url": "https://github.com/niharparikh/ghostsite-theme.git"
     },
     "bugs": "https://github.com/TryGhost/Casper/issues",
-    "contributors": "https://github.com/TryGhost/Casper/graphs/contributors",
+    "contributors": "Nihar Parikh",
     "devDependencies": {
         "@tryghost/release-utils": "0.4.1",
         "autoprefixer": "9.7.4",
